--- a/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/总结.md
+++ b/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/总结.md
@@ -45,24 +45,41 @@
 
 + 设计层
 
-	​	我理解的设计层是从业务的角度出发，对业务功能进行划分。
+  ​	我理解的设计层是从业务的角度出发，对业务功能进行划分。
 
-	> 1. A method to support a reflective derivation of business components from conceptual models
-	>
-	> 2. A fuzzy formal concept analysis based approach for business component identification
-	> 	1. 这篇文章提出的一种利用模糊形式概念分析从商业模型中识别组件的方法；采用模糊形式概念的原因是：其他方法都是通过分析业务元素的属性将业务元素分类为一组组件，没有考虑业务元素属性的差异。
-	> 	2. 业务构件：可以将复杂的业务逻辑分解成一组自包含的功能单元，这些功能单元可以在不需要初始设计者的情况下在上下文中重用
-	> 	3. 业务组件构建阶段进一步分为四个步骤：业务领域建模、识别、设计和实现业务组件。
-	> 	4. 业务功能模型提供对对象的操作，以实现业务目标。业务信息模型定义了业务对象之间的关系，业务流程模型反映了业务活动和对象之间的行为关系。
-	> 	5. 从业务模型中识别业务组件的方式可以分为两种：
-	> 		1. 基于结构的方法
-	> 		2. 特征匹配的方法
-	>
-	> 3. Clustering analysis classes to identify software components
+  组件中的业务元素应该紧密相连，不同组件中的元素应该具有较小的耦合性。
 
-	这些方法主要是侧重于提取底层系统的功能，并将其映射到模型，以提取可复用组件
+  在组件识别中应该遵循两个标准：
 
-	​	
+  + 组件应该是自包含的，并且与其他组件几乎没有耦合。（也就是组件应该满足高内聚、低耦合标准）
+
+  	> 耦合性：也成块间联系。指软件系统结构中各模块间相互联系紧密程度的一种度量。模块之间联系越紧密，其耦合性越强，模块的独立性则越差。模块间耦合高低取决于模块间接口的复杂性、调用的方式及传递的信息。
+  	>
+  	> 内聚性：又称块内联系。指模块的功能强度的度量，即一个模块内部各个元素彼此结合的紧密程度的度量。若一个模块内各元素（语名之间、程序段之间）联系得越紧密，则他们的内聚性就越高。
+  	>
+  	> 所谓高内聚是指一个软件模块是由相关性很强的代码组成，只负责一项任务，也就是常说的单一责任原则。
+
+  + 业务元素应该至少分配给一个组件。如果一个元素连接到多个组件，则可以将对象分配给具有最强链接性的组件。
+
+  > 1. A method to support a reflective derivation of business components from conceptual models
+  > 2. A fuzzy formal concept analysis based approach for business component identification
+  > 	1. 这篇文章提出的一种利用模糊形式概念分析从商业模型中识别组件的方法；采用模糊形式概念的原因是：其他方法都是通过分析业务元素的属性将业务元素分类为一组组件，没有考虑业务元素属性的差异。
+  > 	2. 业务构件：可以将复杂的业务逻辑分解成一组自包含的功能单元，这些功能单元可以在不需要初始设计者的情况下在上下文中重用
+  > 	3. 业务组件构建阶段进一步分为四个步骤：业务领域建模、识别、设计和实现业务组件。
+  > 	4. 业务功能模型提供对对象的操作，以实现业务目标。业务信息模型定义了业务对象之间的关系，业务流程模型反映了业务活动和对象之间的行为关系。
+  > 	5. 从业务模型中识别业务组件的方式可以分为两种：
+  > 	  1. 基于结构的方法
+  > 	  2. 特征匹配的方法
+  > 	6. 业务模型是由两种基本元素组成
+  > 	  1. 业务对象
+  > 	    1. 业务对象由对象的属性集和对象的操作集两个集合进行表示
+  > 	  2. 业务活动
+  > 	    1. 业务活动定义为BA=(DS，ES，BOP)，其中DS是该活动中的业务数据集，ES包含触发该活动的事件和由该活动生成的事件，而BOP是由业务对象提供的操作集。业务活动之间的相似性可以由三种类型的属性来表示--数据、事件和业务操作。
+  > 3. Clustering analysis classes to identify software components
+
+  这些方法主要是侧重于提取底层系统的功能，并将其映射到模型，以提取可复用组件
+
+  ​	
 
 + 面向对象源代码层
 
