--- a/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/论文中提到的工具和方法概述.md
+++ b/论文/最近需要看的/1997-TOSEM-An evolutional approach to constructing effective software reuse repositories/论文中提到的工具和方法概述.md
@@ -201,3 +201,17 @@ PEEL使用三步程序处理术语：
 字符串：它们通常包括面向人的文本和文档，两者都包含我们提取的有用单词。
 
 注释：它们包含非常有用的信息，因为它们已经是代码的自然语言描述
+
+#  An Application Software Analytics Toolkit for Facilitating the Understanding, Componentization, and Refactoring of Large-Scale Scientifific Models
+
+这个新的工具包能够收集源代码信息，分析库依赖关系，揭示代码使用的特殊软硬件功能，以及识别特殊工具和特定编译器版本的需求。
+
+**可以从软件X射线扫描仪中提取的信息如下所示：**
+
++ 软件的基本结构和功能以及它们之间的关系。
++ 第三方库组件和组成：显示在依存关系图中，每个都具有所需的最小版本号。
++ 编程语言：使用哪些特定语言及其最低语言版本。
++ 编译器：软件包需要哪些编译器和版本。
++ 计算机架构组件：软件包是否需要GPU、AVX、NUMA控制、FPGA、并行文件系统、突发缓冲区、NVLink、GPUDirect等。根据软件构建流程配置选项，我们将每个硬件组件分为三类：（i）授权，（ii）性能关键，或（iii）便携式但速度慢。
++ 通信层：软件包使用MPI库、RDMA、Socket或其他特殊通信库。
++ 编程模型识别：MPI、混合MPI/P线程/OpenMP、PGAS、AMT(异步多任务)或其他并行计算模型。
